# BachelorProject

./: .gitignore
mfodl_monitor/: Cargo.toml  Data_generator.py  README.md  benchmark.py  benchmarkCsv.sh  benchmarkFigure.py  benchmarkJson.sh  benchmarkPipe.sh  boxplot.py  dataCalculator.py  idk.py  proc.py
mfodl_monitor/benchmark_data/csv/step1/: csv_data1800_1w.txt  (+15 more)
mfodl_monitor/data/: 100K100TS.csv  100K2md15sd_out_of_order.csv  100K2md25sd_out_of_order.csv  100K2md5sd_out_of_order.csv  100K5md15sd_out_of_order.csv  100K5md25sd_out_of_order.csv  100K5md5sd_out_of_order.csv  50K2md15sd_out_of_order.csv  50K2md25sd_out_of_order.csv  50K2md5sd_out_of_order.csv  50K5md15sd_out_of_order.csv  50K5md25sd_out_of_order.csv  50K5md5sd_out_of_order.csv  cleaned_data1800.csv  cleaned_data300.csv  cleaned_data600.csv  cleaned_data900.csv  cleaned_data900_2.csv  triangle_result_100K100TS  triangle_result_250K250TS  triangle_result_50K50TS  triangle_verimon_100K100TS  triangle_verimon_250K250TS  triangle_verimon_50K50TS
mfodl_monitor/src/: constants.rs  lib.rs  timeunits.rs
mfodl_monitor/src/dataflow_constructor/: dataflow_constructor.rs  function_tests.rs  mod.rs  observation_sequence.rs  operator_test.rs  operators.rs  partial_sequence.rs  types.rs
mfodl_monitor/src/dependency_graph_generator/: dependency_graph.rs  dependency_graph_generator.rs  mod.rs
mfodl_monitor/src/evaluation_plan_generator/: evaluation_plan_generator.rs  mod.rs
mfodl_monitor/src/parser/: csv_parser.rs  formula_parser.rs  formula_syntax_tree.rs  json_parser.rs  mod.rs  test_data.json
(+176 files in other folders)
