[package]
name = "timelymon"
version = "0.2.0"
authors = ["galinapeycheva <galinap@ethz.ch>", "Dmitriy Traytel <traytel@di.ku.dk>", "Lennard Reese <lere@di.ku.dk>", "Rafael Castro <rasi@di.ku.dk>"]

[dependencies]
nom = "^3.2"
text_io = "0.1.7"
rand = "0.4.2"
pbr = "1.0.0"
timely = "0.12.0"
abomonation = "0.7.2"
timely_communication = "0.12.0"
abomonation_derive = "*"
rustyline = "5.0.0"
itertools = "0.10.5"
clap = { version = "3.2.23", features = ["derive"] }
structopt = "0.3.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lib]
name = "mfodl_monitor"
path = "src/lib.rs"

[[bin]]
name = "experiments"
path = "src/bin/experiments.rs"

[[bin]]
name = "timelymon"
path = "src/bin/main.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "count"
path = "src/bin/count_ahead.rs"

[[bin]]
name = "randy"
path = "src/bin/randy.rs"

[features]
simplify_formulas = []
optimise_evaluation = []

[profile.release]
debug = true
